style change reflows should be send down to the childrens, bug 108340, r=karnaze sr=attinasi